# mangoguard

./: .gitignore  .pre-commit-config.yaml  AI Writing.md  CLAUDE.md  CREST_Official_Guidelines_Research.md  CREST_Precedents_And_Patterns.md  CREST_REPORT.docx  CREST_REPORT.md  HARDWARE_BUILD_GUIDE.md  LOGBOOK.md  Mango_Farm_Monitoring_Landscape.md  PROJECT_README.md  README.md  REORDER.md  SESSION_STATE.md  STUDENT_PROFILE.md  VERIFICATION.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
artifacts/: device_model_coeffs.json  eval_metrics.json
data/: README.md  cibrc_mango_registered.csv  pesticide_metadata.yaml  rasff_mango_rejections.csv  sample_node_log.csv
data/baseline_schedules/: icar_cish.yaml  kvk_konkan.yaml
data/chatbot_corpus/: MANIFEST.yaml
data/farm/: aamparakh_farm_readings.csv
data/fieldwork/: visit_1.yaml
data/mrl_tables/: japan.yaml
docs/: DESIGN.md  FARM_DATA_COLLECTION.md  PROJECT_README.md
docs/hardware/: HARDWARE_BUILD_GUIDE.md
docs/report/: CREST_REPORT.docx  CREST_REPORT.md  CREST_STUDENT_PROFILE.md  LOGBOOK.md  STUDENT_PROFILE.docx  STUDENT_PROFILE.md  VERIFICATION.md  crest_student_profile_form.docx  crest_student_profile_form_FILLED.docx
docs/superpowers/plans/: 00-INDEX.md  2026-05-30-02-free-public-connectors.md  2026-05-30-04-risk-engine-recommender.md  2026-05-30-05-supporting-modules.md  2026-05-30-06-dashboard-fieldwork-report.md
docs/superpowers/specs/: 2026-05-30-mangoguard-design.md
firmware/: README.md
firmware/aamparakh_node/: aamparakh_node.ino
firmware/aamrakshak_node/: aamrakshak_node.ino
notebooks/: 02_anthracnose_htr_calibration.ipynb
scripts/: fetch_data.py  make_figures.py  make_report_figures.py  make_sample_log.py  run_evaluation.py
src/aamparakh/: __init__.py  data.py  evaluate.py  farm.py  models.py  sensors.py
src/aamrakshak/: __init__.py
src/aamrakshak/eval/: __init__.py  ablation.py  calibration.py  leafwet_validation.py  metrics.py  spray_reduction.py  tier_study.py
src/aamrakshak/io/: __init__.py  ingest.py
src/aamrakshak/riskengine/: __init__.py  anthracnose.py  leafwetness.py  ppi.py
src/aamrakshak/sim/: __init__.py  outbreaks.py  sensors.py  weather.py
src/mangoguard/: __init__.py  geo.py  schema.py  store.py
src/mangoguard/app/views/: st_chatbot.py  st_disease.py  st_orchard.py  st_recommender.py  st_yield_price.py
src/mangoguard/chatbot/: corpus.py  ingest.py  rag.py
src/mangoguard/connectors/: _http.py  agmarknet.py  base.py  csv_fallback.py  fasal.py  sentinel2.py
src/mangoguard/disease_detector/: data.py  gradcam.py  infer.py  train.py
src/mangoguard/fieldwork/: __init__.py
src/mangoguard/orchard_health/: __init__.py  queries.py  trend.py
src/mangoguard/recommend/: cibrc.py  markets.py  pesticide_metadata.py  rasff.py  recommend.py
src/mangoguard/risk/: anthracnose.py  calibration.py  powdery_mildew.py  ppi.py
src/mangoguard/yield_price/: features.py  shap_explain.py
tests/: conftest.py  test_aamparakh.py  test_ingest.py  test_metrics.py  test_module3_integration.py  test_pipeline.py  test_riskengine.py  test_schema.py  test_sim.py  test_smoke_e2e.py  test_store.py
tests/connectors/: test_auth.py  test_base.py  test_baseline_e2e.py  test_commercial_e2e.py  test_csv_fallback.py  test_dbskkv.py  test_fyllo.py  test_pessl.py  test_sentinel2.py
tests/connectors/fixtures/: csv_fallback_sample.csv  dbskkv_dapoli_forecast_2025-07-12.html  fasal_export.csv  fyllo_export.csv  imd_ratnagiri_amfu_2025-07-12.html  pessl_fieldclimate_sample_response.json
tests/disease_detector/: test_data.py  test_model.py
tests/evaluation/: test_baseline_schedule.py  test_retrospective.py
tests/recommend/: test_mrl_loader.py  test_pesticide_metadata.py  test_rasff.py  test_recommend.py
tests/risk/: test_anthracnose.py  test_ppi.py
tests/yield_price/: test_price_xgb.py  test_shap_explain.py
useless stuff/: CREST_Crop_Disease_Detection.ipynb  CREST_Paper_Writing_Guide.md  CREST_REPORT_SCAFFOLD.md  CREST_Reference_List.md  CREST_Student_Profile_Checklist.md  Monitoring_System_Integration_Options.md  OLD_MangoGuard_README.md  _ARCHIVE_NOTE.md
useless stuff/old_mangoguard_build/: streamlit_app.py
useless stuff/old_mangoguard_build/data/: cibrc_mango_registered.csv  csv_fallback_schema.yaml  orchard_blocks.geojson  rasff_mango_rejections.csv
useless stuff/old_mangoguard_build/data/fieldwork/: visit_2.yaml  visit_3.yaml
useless stuff/old_mangoguard_build/data/mrl_tables/: buyer_specific.yaml  codex.yaml  eu.yaml  fssai.yaml
useless stuff/old_mangoguard_build/notebooks/: 05_recommender_evaluation.ipynb
useless stuff/old_mangoguard_build/report/: CREST_REPORT.md
useless stuff/old_mangoguard_build/src_mangoguard/: store.py
useless stuff/old_mangoguard_build/src_mangoguard/app/: __init__.py  main.py  state.py
useless stuff/old_mangoguard_build/src_mangoguard/chatbot/: __init__.py
useless stuff/old_mangoguard_build/src_mangoguard/connectors/: __init__.py  _auth.py  cropsap.py  dbskkv.py  fyllo.py  imd.py  pessl.py  registry.py
useless stuff/old_mangoguard_build/src_mangoguard/disease_detector/: __init__.py  model.py
useless stuff/old_mangoguard_build/src_mangoguard/evaluation/: __init__.py  baseline_schedule.py  rasff_counterfactual.py  retrospective.py
useless stuff/old_mangoguard_build/src_mangoguard/fieldwork/: visit_log.py
useless stuff/old_mangoguard_build/src_mangoguard/recommend/: __init__.py  mrl_loader.py  ranker.py
useless stuff/old_mangoguard_build/src_mangoguard/risk/: __init__.py  hopper.py
useless stuff/old_mangoguard_build/src_mangoguard/yield_price/: __init__.py  price_xgb.py  yield_xgb.py
useless stuff/old_mangoguard_build/tests/: test_e2e_full_stack.py  test_geo.py  test_schema.py  test_smoke_e2e.py
useless stuff/old_mangoguard_build/tests/app/: test_smoke_imports.py
useless stuff/old_mangoguard_build/tests/chatbot/: test_corpus.py  test_ingest.py  test_rag.py
useless stuff/superpowers/plans/: 2026-05-30-01-foundation.md  2026-05-30-03-commercial-connectors.md
(+25 files in other folders)
