[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aamrakshak"
version = "0.1.0"
description = "Low-cost leaf-wetness early-warning node for mango anthracnose"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AamRakshak CREST sample project" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4"]
viz = ["matplotlib>=3.8"]
dashboard = ["streamlit>=1.34", "altair>=5.3"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "scikit-learn>=1.4", "matplotlib>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/aamrakshak"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "PL"]
ignore = [
    "PLR0913",  # many-argument scientific functions are clearer flat
    "PLR2004",  # magic numbers are intentional in physical models
    "PLR0912",  # branchy tier/feature dispatch reads fine
    "PLR0915",
]

[tool.ruff.lint.isort]
known-first-party = ["aamrakshak"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "E402", "PLC0415", "E501", "N802"]
"scripts/**/*.py" = ["E402", "PLC0415"]
"app/**/*.py" = ["E402", "PLC0415", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]
