[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aamparakh"
version = "0.1.0"
description = "Low-cost multispectral estimation of mango dry matter content for harvest-readiness"
readme = "docs/PROJECT_README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AamParakh CREST project" }]
dependencies = ["numpy>=1.26", "pandas>=2.2", "scipy>=1.11", "scikit-learn>=1.4"]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.4", "matplotlib>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/aamparakh"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "extra_stuff"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402", "E702"]
"tests/**/*.py" = ["E402", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
